# fluent-python-2e

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pylint.yml
chapters/01-data-model/: frenchdeck.py
chapters/03-dict-set/: README.md  dialcodes.py  index.py  index0.py  index_default.py  missing.py  strkeydict.py  strkeydict0.py  transformdict.py
chapters/03-dict-set/py3.10/: creator.py
chapters/03-dict-set/support/: container_perftest.py  container_perftest_datagen.py  hashdiff.py
console/: __init__.py
docs/: about.md  chapters.md  index.md  structure.md
docs/chapters/: 01-data-model.md
overrides/partials/: footer.html
tests/: test_console.py
